--- a/PyCitySchools - Challenge - testing.ipynb
+++ b/PyCitySchools - Challenge - testing.ipynb
@@ -1727,14 +1727,24 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "                       9th  10th  11th  12th\n",
-       "Bailey High School    77.1  77.0  77.5  76.5\n",
-       "Cabrera High School   83.1  83.2  82.8  83.3\n",
-       "Figueroa High School  76.4  76.5  76.9  77.2\n",
-       "Ford High School      77.4  77.7  76.9  76.2\n",
-       "Griffin High School   82.0  84.2  83.8  83.4"
+       "                        9th  10th  11th  12th\n",
+       "Bailey High School     77.1  77.0  77.5  76.5\n",
+       "Cabrera High School    83.1  83.2  82.8  83.3\n",
+       "Figueroa High School   76.4  76.5  76.9  77.2\n",
+       "Ford High School       77.4  77.7  76.9  76.2\n",
+       "Griffin High School    82.0  84.2  83.8  83.4\n",
+       "Hernandez High School  77.4  77.3  77.1  77.2\n",
+       "Holden High School     83.8  83.4  85.0  82.9\n",
+       "Huang High School      77.0  75.9  76.4  77.2\n",
+       "Johnson High School    77.2  76.7  77.5  76.9\n",
+       "Pena High School       83.6  83.4  84.3  84.1\n",
+       "Rodriguez High School  76.9  76.6  76.4  77.7\n",
+       "Shelton High School    83.4  82.9  83.4  83.8\n",
+       "Thomas High School     83.6  83.1  83.5  83.5\n",
+       "Wilson High School     83.1  83.7  83.2  83.0\n",
+       "Wright High School     83.3  84.0  83.8  83.6"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>9th</th>\n      <th>10th</th>\n      <th>11th</th>\n      <th>12th</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Bailey High School</th>\n      <td>77.1</td>\n      <td>77.0</td>\n      <td>77.5</td>\n      <td>76.5</td>\n    </tr>\n    <tr>\n      <th>Cabrera High School</th>\n      <td>83.1</td>\n      <td>83.2</td>\n      <td>82.8</td>\n      <td>83.3</td>\n    </tr>\n    <tr>\n      <th>Figueroa High School</th>\n      <td>76.4</td>\n      <td>76.5</td>\n      <td>76.9</td>\n      <td>77.2</td>\n    </tr>\n    <tr>\n      <th>Ford High School</th>\n      <td>77.4</td>\n      <td>77.7</td>\n      <td>76.9</td>\n      <td>76.2</td>\n    </tr>\n    <tr>\n      <th>Griffin High School</th>\n      <td>82.0</td>\n      <td>84.2</td>\n      <td>83.8</td>\n      <td>83.4</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>9th</th>\n      <th>10th</th>\n      <th>11th</th>\n      <th>12th</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Bailey High School</th>\n      <td>77.1</td>\n      <td>77.0</td>\n      <td>77.5</td>\n      <td>76.5</td>\n    </tr>\n    <tr>\n      <th>Cabrera High School</th>\n      <td>83.1</td>\n      <td>83.2</td>\n      <td>82.8</td>\n      <td>83.3</td>\n    </tr>\n    <tr>\n      <th>Figueroa High School</th>\n      <td>76.4</td>\n      <td>76.5</td>\n      <td>76.9</td>\n      <td>77.2</td>\n    </tr>\n    <tr>\n      <th>Ford High School</th>\n      <td>77.4</td>\n      <td>77.7</td>\n      <td>76.9</td>\n      <td>76.2</td>\n    </tr>\n    <tr>\n      <th>Griffin High School</th>\n      <td>82.0</td>\n      <td>84.2</td>\n      <td>83.8</td>\n      <td>83.4</td>\n    </tr>\n    <tr>\n      <th>Hernandez High School</th>\n      <td>77.4</td>\n      <td>77.3</td>\n      <td>77.1</td>\n      <td>77.2</td>\n    </tr>\n    <tr>\n      <th>Holden High School</th>\n      <td>83.8</td>\n      <td>83.4</td>\n      <td>85.0</td>\n      <td>82.9</td>\n    </tr>\n    <tr>\n      <th>Huang High School</th>\n      <td>77.0</td>\n      <td>75.9</td>\n      <td>76.4</td>\n      <td>77.2</td>\n    </tr>\n    <tr>\n      <th>Johnson High School</th>\n      <td>77.2</td>\n      <td>76.7</td>\n      <td>77.5</td>\n      <td>76.9</td>\n    </tr>\n    <tr>\n      <th>Pena High School</th>\n      <td>83.6</td>\n      <td>83.4</td>\n      <td>84.3</td>\n      <td>84.1</td>\n    </tr>\n    <tr>\n      <th>Rodriguez High School</th>\n      <td>76.9</td>\n      <td>76.6</td>\n      <td>76.4</td>\n      <td>77.7</td>\n    </tr>\n    <tr>\n      <th>Shelton High School</th>\n      <td>83.4</td>\n      <td>82.9</td>\n      <td>83.4</td>\n      <td>83.8</td>\n    </tr>\n    <tr>\n      <th>Thomas High School</th>\n      <td>83.6</td>\n      <td>83.1</td>\n      <td>83.5</td>\n      <td>83.5</td>\n    </tr>\n    <tr>\n      <th>Wilson High School</th>\n      <td>83.1</td>\n      <td>83.7</td>\n      <td>83.2</td>\n      <td>83.0</td>\n    </tr>\n    <tr>\n      <th>Wright High School</th>\n      <td>83.3</td>\n      <td>84.0</td>\n      <td>83.8</td>\n      <td>83.6</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "execution_count": 61
@@ -1757,7 +1767,7 @@
     "# Remove the index name.\n",
     "math_scores_by_grade.index.name = None\n",
     "# Display the DataFrame.\n",
-    "math_scores_by_grade.head()"
+    "math_scores_by_grade"
    ]
   },
   {
@@ -1769,14 +1779,24 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "                       9th  10th  11th  12th\n",
-       "Bailey High School    81.3  80.9  80.9  80.9\n",
-       "Cabrera High School   83.7  84.3  83.8  84.3\n",
-       "Figueroa High School  81.2  81.4  80.6  81.4\n",
-       "Ford High School      80.6  81.3  80.4  80.7\n",
-       "Griffin High School   83.4  83.7  84.3  84.0"
+       "                        9th  10th  11th  12th\n",
+       "Bailey High School     81.3  80.9  80.9  80.9\n",
+       "Cabrera High School    83.7  84.3  83.8  84.3\n",
+       "Figueroa High School   81.2  81.4  80.6  81.4\n",
+       "Ford High School       80.6  81.3  80.4  80.7\n",
+       "Griffin High School    83.4  83.7  84.3  84.0\n",
+       "Hernandez High School  80.9  80.7  81.4  80.9\n",
+       "Holden High School     83.7  83.3  83.8  84.7\n",
+       "Huang High School      81.3  81.5  81.4  80.3\n",
+       "Johnson High School    81.3  80.8  80.6  81.2\n",
+       "Pena High School       83.8  83.6  84.3  84.6\n",
+       "Rodriguez High School  81.0  80.6  80.9  80.4\n",
+       "Shelton High School    84.1  83.4  84.4  82.8\n",
+       "Thomas High School     83.7  84.3  83.6  83.8\n",
+       "Wilson High School     83.9  84.0  83.8  84.3\n",
+       "Wright High School     83.8  83.8  84.2  84.1"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>9th</th>\n      <th>10th</th>\n      <th>11th</th>\n      <th>12th</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Bailey High School</th>\n      <td>81.3</td>\n      <td>80.9</td>\n      <td>80.9</td>\n      <td>80.9</td>\n    </tr>\n    <tr>\n      <th>Cabrera High School</th>\n      <td>83.7</td>\n      <td>84.3</td>\n      <td>83.8</td>\n      <td>84.3</td>\n    </tr>\n    <tr>\n      <th>Figueroa High School</th>\n      <td>81.2</td>\n      <td>81.4</td>\n      <td>80.6</td>\n      <td>81.4</td>\n    </tr>\n    <tr>\n      <th>Ford High School</th>\n      <td>80.6</td>\n      <td>81.3</td>\n      <td>80.4</td>\n      <td>80.7</td>\n    </tr>\n    <tr>\n      <th>Griffin High School</th>\n      <td>83.4</td>\n      <td>83.7</td>\n      <td>84.3</td>\n      <td>84.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>9th</th>\n      <th>10th</th>\n      <th>11th</th>\n      <th>12th</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Bailey High School</th>\n      <td>81.3</td>\n      <td>80.9</td>\n      <td>80.9</td>\n      <td>80.9</td>\n    </tr>\n    <tr>\n      <th>Cabrera High School</th>\n      <td>83.7</td>\n      <td>84.3</td>\n      <td>83.8</td>\n      <td>84.3</td>\n    </tr>\n    <tr>\n      <th>Figueroa High School</th>\n      <td>81.2</td>\n      <td>81.4</td>\n      <td>80.6</td>\n      <td>81.4</td>\n    </tr>\n    <tr>\n      <th>Ford High School</th>\n      <td>80.6</td>\n      <td>81.3</td>\n      <td>80.4</td>\n      <td>80.7</td>\n    </tr>\n    <tr>\n      <th>Griffin High School</th>\n      <td>83.4</td>\n      <td>83.7</td>\n      <td>84.3</td>\n      <td>84.0</td>\n    </tr>\n    <tr>\n      <th>Hernandez High School</th>\n      <td>80.9</td>\n      <td>80.7</td>\n      <td>81.4</td>\n      <td>80.9</td>\n    </tr>\n    <tr>\n      <th>Holden High School</th>\n      <td>83.7</td>\n      <td>83.3</td>\n      <td>83.8</td>\n      <td>84.7</td>\n    </tr>\n    <tr>\n      <th>Huang High School</th>\n      <td>81.3</td>\n      <td>81.5</td>\n      <td>81.4</td>\n      <td>80.3</td>\n    </tr>\n    <tr>\n      <th>Johnson High School</th>\n      <td>81.3</td>\n      <td>80.8</td>\n      <td>80.6</td>\n      <td>81.2</td>\n    </tr>\n    <tr>\n      <th>Pena High School</th>\n      <td>83.8</td>\n      <td>83.6</td>\n      <td>84.3</td>\n      <td>84.6</td>\n    </tr>\n    <tr>\n      <th>Rodriguez High School</th>\n      <td>81.0</td>\n      <td>80.6</td>\n      <td>80.9</td>\n      <td>80.4</td>\n    </tr>\n    <tr>\n      <th>Shelton High School</th>\n      <td>84.1</td>\n      <td>83.4</td>\n      <td>84.4</td>\n      <td>82.8</td>\n    </tr>\n    <tr>\n      <th>Thomas High School</th>\n      <td>83.7</td>\n      <td>84.3</td>\n      <td>83.6</td>\n      <td>83.8</td>\n    </tr>\n    <tr>\n      <th>Wilson High School</th>\n      <td>83.9</td>\n      <td>84.0</td>\n      <td>83.8</td>\n      <td>84.3</td>\n    </tr>\n    <tr>\n      <th>Wright High School</th>\n      <td>83.8</td>\n      <td>83.8</td>\n      <td>84.2</td>\n      <td>84.1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "execution_count": 62
@@ -1799,7 +1819,7 @@
     "# Remove the index name.\n",
     "reading_scores_by_grade.index.name = None\n",
     "# Display the data frame.\n",
-    "reading_scores_by_grade.head()"
+    "reading_scores_by_grade"
    ]
   },
   {
@@ -2262,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2280,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2320,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Average Math Score</th>\n      <th>Average Reading Score</th>\n      <th>% Passing Math</th>\n      <th>% Passing Reading</th>\n      <th>% Overall Passing</th>\n    </tr>\n    <tr>\n      <th>School Type</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Charter</th>\n      <td>83.473852</td>\n      <td>83.896421</td>\n      <td>93.620830</td>\n      <td>96.586489</td>\n      <td>90.432244</td>\n    </tr>\n    <tr>\n      <th>District</th>\n      <td>76.956733</td>\n      <td>80.966636</td>\n      <td>66.548453</td>\n      <td>80.799062</td>\n      <td>53.672208</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 77
+     "execution_count": 76
     }
    ],
    "source": [
@@ -2341,7 +2361,18 @@
     }
    ],
    "source": [
-    "# Formatting\n"
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
    ]
   },
   {
@@ -2354,7 +2385,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "pythondata",
+   "name": "python379jvsc74a57bd05057b7eef5ef6178ba0df79a20bb385a33fde4771b1ac03d2b482b12ce503196",
    "display_name": "Python 3.7.9 64-bit ('PythonData': conda)"
   },
   "language_info": {
